# inheritance_macro

./: Cargo.toml  LICENSE  README.md
src/: async_threads_dragon.rs  baseclass.rs  bird_archetype.rs  dragon.rs  foo_bar_obj.rs  foons.rs  lib.rs  main.rs  obj_fr_baseclass.rs
src/dragon/: bird.rs  lizard.rs
src/dragon/bird/: animal.rs  egg_laying_animal.rs
src/dragon/bird/animal/: obj.rs
src/model/: mod.rs
src/model/components/: animal_component.rs  bird_component.rs  dragon_component.rs  egglaying_animal_component.rs  food_component.rs  lizard_component.rs  mod.rs  obj_component.rs
src/model/entities/: bird_entity.rs  dragon_entity.rs  food_entity.rs  lizard_entity.rs  mod.rs
src/model/traits/: animal_trait.rs  bird_trait.rs  dragon_trait.rs  egglaying_animal_trait.rs  food_trait.rs  lizard_trait.rs  mod.rs  obj_trait.rs
