[package]
name = "inheritance_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
futures = "0.3.30"
quote = "1.0"
syn = { version ="1.0", features = ["full"] }
traitcast = "0.5.0"
uuid = {version = "1.8.0", features = ["v4"]}
